insertion sort test

--- a/algorithm/02-search-and-sort.ipynb
+++ b/algorithm/02-search-and-sort.ipynb
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -379,6 +379,7 @@
     "        j = i-1\n",
     "        # 리스트의 j번 위치에 있는 값과 key를 비교해 key가 삽입될 적절한 위치를 찾음\n",
     "        while j>=0 and list[j] > key:\n",
+    "            #print(\"list[j]:\",list[j], \", key:\",key)\n",
     "            list[j+1] = list[j]\n",
     "            j -= 1\n",
     "        print(list, \"i:\", i, \"j:\", j, \"key:\", key)\n",
@@ -400,6 +401,13 @@
     "# 1 2 4 5 | 3 ← 대상 범위를 하나 줄입니다.\n",
     "# 1 2 3 4 | 5 ← 마지막으로 3의 위치를 맞춥니다. 3은 4, 5보다 작으므로 4와 5를 한 칸씩 오른쪽으로 옮긴 다음 비어 있는 공간에 3을 넣습니다.\n",
     "# 1 2 3 4 5 | ← 대상 범위를 하나 줄입니다. 더는 자료가 없으므로 종료합니다(최종 결과). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 병합정렬"
    ]
   },
   {
