binary search and merge&quick sort

--- a/algorithm/02-search-and-sort.ipynb
+++ b/algorithm/02-search-and-sort.ipynb
@@ -121,6 +121,95 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 이진탐색(binary search)\n",
+    "\n",
+    "탐색할 자료를 둘러 나눠 찾는 값이 있을 법한 곳만 탐색하기 때문에 순차탐색보다 빠름\n",
+    "1. 중간위치를 찾는다.\n",
+    "2. 찾는 값과 중간 위치 값을 비교한다.\n",
+    "3. 같다면 원하는 값을 찾은 것이므로 위치 번호를 결과값으로 돌려준다.\n",
+    "4. 찾는 값이 중간 위치 값보다 크다면 중간 위치의 오른쪽을 대상으로 다시 탐색한다(1번부터 반복)\n",
+    "5. 찾는 값이 위치 값보다 작다면 중간 위치의 왼쪽을 대상으로 다시 탐색(1번부터 반복)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def binary_search(list, target):\n",
+    "    \n",
+    "    start = 0\n",
+    "    end = len(list)-1\n",
+    "    while start <= end:\n",
+    "        mid = (start+end)//2\n",
+    "        if list[mid] == target:\n",
+    "            return mid\n",
+    "        elif list[mid] < target:\n",
+    "             start = mid+1\n",
+    "        else:\n",
+    "            end = mid-1\n",
+    "            \n",
+    "    return -1\n",
+    "\n",
+    "list_9 = [1, 4, 9, 16, 25, 36, 49, 64, 81]\n",
+    "print(binary_search(list_9, 36))\n",
+    "print(binary_search(list_9, 10))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 재귀호출을 사용한 이진탐색 알고리즘\n",
+    "\n",
+    "def binary_search_sub(list, target, start, end):\n",
+    "    if start > end:\n",
+    "        return -1\n",
+    "    \n",
+    "    mid = (start+end)//2\n",
+    "    if target == list[mid]:\n",
+    "        return mid\n",
+    "    elif target > list[mid]:\n",
+    "        return binary_search_sub(list, target, mid+1, end)\n",
+    "    else:\n",
+    "        return binary_search_sub(list, target, start, mid-1)\n",
+    "    return -1\n",
+    "\n",
+    "def binary_search(list, target):\n",
+    "    return binary_search_sub(list, target, 0, len(list)-1)\n",
+    "\n",
+    "\n",
+    "list_10 = [1, 4, 9, 16, 25, 36, 49, 64, 81]\n",
+    "print(binary_search(list_10, 36))\n",
+    "print(binary_search(list_10, 100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 정렬\n",
     "\n",
     "## 선택정렬\n"
@@ -243,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -260,8 +349,6 @@
    ],
    "source": [
     "# 일반적인 선택 정렬 알고리즘\n",
-    "# 입력: 리스트 list\n",
-    "# 출력: 없음(입력으로 주어진 list가 정렬됨)\n",
     "\n",
     "def sel_sort(list):\n",
     "    n = len(list)\n",
@@ -353,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -408,6 +495,252 @@
    "metadata": {},
    "source": [
     "## 병합정렬"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6]\n",
+      "[8]\n",
+      "result2: [6, 8]\n",
+      "[9]\n",
+      "[10]\n",
+      "result2: [9, 10]\n",
+      "[3]\n",
+      "[9, 10]\n",
+      "result2: [3, 9]\n",
+      "result2: [3, 9, 10]\n",
+      "[6, 8]\n",
+      "[3, 9, 10]\n",
+      "result2: [3, 6, 8, 9]\n",
+      "result2: [3, 6, 8, 9, 10]\n",
+      "[1]\n",
+      "[2]\n",
+      "result2: [1, 2]\n",
+      "[7]\n",
+      "[5]\n",
+      "result1: [5, 7]\n",
+      "[4]\n",
+      "[5, 7]\n",
+      "result2: [4, 5]\n",
+      "result2: [4, 5, 7]\n",
+      "[1, 2]\n",
+      "[4, 5, 7]\n",
+      "result2: [1, 2, 4]\n",
+      "result2: [1, 2, 4, 5]\n",
+      "result2: [1, 2, 4, 5, 7]\n",
+      "[3, 6, 8, 9, 10]\n",
+      "[1, 2, 4, 5, 7]\n",
+      "result1: [1, 2, 3, 4, 5, 6, 7, 8]\n",
+      "result1: [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "result1: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 쉽게 설명한 병합 정렬\n",
+    "\n",
+    "def merge_sort(list):\n",
+    "    n = len(list)\n",
+    "    # 종료조건: 정렬할 리스트의 자료 개수가 한 개 이하면 정렬할 필요 없음\n",
+    "    if n <= 1:\n",
+    "        return list\n",
+    "    # 그룹을 나눠서 각각 병합 정렬을 호출하는 과정\n",
+    "    mid = n // 2\n",
+    "    # 재귀 호출로 두개의 그룹을 정렬\n",
+    "    group_1 = merge_sort(list[:mid])\n",
+    "    group_2 = merge_sort(list[mid:])\n",
+    "    print(group_1)\n",
+    "    print(group_2)\n",
+    "\n",
+    "\n",
+    "    # 두 그룹을 하나로 병합\n",
+    "    result = []\n",
+    "    while group_1 and group_2:\n",
+    "        if group_1[0] < group_2[0]:\n",
+    "            result.append(group_1.pop(0))\n",
+    "        else:\n",
+    "            result.append(group_2.pop(0))\n",
+    "    while group_1:\n",
+    "        result.append(group_1.pop(0))\n",
+    "        print(\"result1:\", result)\n",
+    "    while group_2:\n",
+    "        result.append(group_2.pop(0))\n",
+    "        print(\"result2:\", result)\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "list_7 = [6, 8, 3, 9, 10, 1, 2, 4, 7, 5]\n",
+    "# 일반print(merge_sort(list_7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 일반적인 병합 정렬 알고리즘\n",
+    "\n",
+    "def merge_sort(a):\n",
+    "    n = len(a)\n",
+    " # 종료 조건: 정렬할 리스트의 자료 개수가 한 개 이하이면 정렬할 필요가 없음\n",
+    "    if n <= 1:\n",
+    "        return\n",
+    "    # 그룹을 나누어 각각 병합 정렬을 호출하는 과정\n",
+    "    mid = n // 2    # 중간을 기준으로 두 그룹으로 나눔\n",
+    "    g1 = a[:mid]\n",
+    "    g2 = a[mid:]\n",
+    "    merge_sort(g1)  # 재귀 호출로 첫 번째 그룹을 정렬\n",
+    "    merge_sort(g2)  # 재귀 호출로 두 번째 그룹을 정렬\n",
+    "\n",
+    "    # 두 그룹을 하나로 병합\n",
+    "    i1 = 0\n",
+    "    i2 = 0\n",
+    "    ia = 0\n",
+    "    while i1 < len(g1) and i2 < len(g2):\n",
+    "        if g1[i1] < g2[i2]:\n",
+    "            a[ia] = g1[i1]\n",
+    "            i1 += 1\n",
+    "            ia += 1\n",
+    "        else:\n",
+    "            a[ia] = g2[i2]\n",
+    "            i2 += 1\n",
+    "            ia += 1 \n",
+    "    # 아직 남아 있는 자료들을 결과에 추가\n",
+    "    while i1 < len(g1):\n",
+    "        a[ia] = g1[i1]\n",
+    "        i1+= 1\n",
+    "        ia += 1\n",
+    "    while i2 < len(g2):\n",
+    "        a[ia] = g2[i2]\n",
+    "        i2 += 1\n",
+    "        ia += 1\n",
+    "\n",
+    "d = [6, 8, 3, 9, 10, 1, 2, 4, 7, 5]\n",
+    "merge_sort(d)\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 퀵정렬\n",
+    "그룹을 둘로 나눠 재귀호출 하는 방식은 병합 정렬과 같지만, 그룹을 나눌 때 먼저 기준과 비교해서 그룹을 나눈다는 점이 병합정렬과 다르다.\n",
+    "퀵 정렬에서는 기준(pivot)을 정하는 것이 정렬의 효율성을 가늠한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 쉽게 설명한 퀵 정렬\n",
+    "\n",
+    "def quick_sort(list):\n",
+    "    n = len(list)\n",
+    "    if n <= 1:\n",
+    "        return list\n",
+    "    \n",
+    "    # 편의상 리스트의 마지막 값을 기준 값으로 정함\n",
+    "    pivot = list[-1]\n",
+    "    g1 = []\n",
+    "    g2 = []\n",
+    "    \n",
+    "    for i in range(0, n-1):\n",
+    "        if list[i] < pivot:\n",
+    "            g1.append(list[i])\n",
+    "        else:\n",
+    "            g2.append(list[i])\n",
+    "            \n",
+    "    # 각 그룹에 대해 재귀 호출로 퀵 정렬을 한후 기준 값과 합쳐 하나의 리스트로 결과값을 반환\n",
+    "    return quick_sort(g1) + [pivot] + quick_sort(g2)\n",
+    "\n",
+    "list_8 = [6, 8, 3, 9, 10, 1, 2, 4, 7, 5]\n",
+    "print(quick_sort(list_8))\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 일반적인 퀵정렬 알고리즘\n",
+    "\n",
+    "def quick_sort_sub(list, start, end):\n",
+    "    if end - start <= 0:\n",
+    "        return\n",
+    "    \n",
+    "    pivot = list[end]\n",
+    "    i = start\n",
+    "    for j in range(start, end):\n",
+    "        if list[j] <= pivot:\n",
+    "            list[i], list[j] = list[j], list[i]\n",
+    "            i += 1\n",
+    "    list[i], list[end] = list[end], list[i]\n",
+    "    \n",
+    "    quick_sort_sub(list, start, i-1) #기준 값보다 작은 그룹을 재귀로 다시 정렬\n",
+    "    quick_sort_sub(list, i+1, end) #기준 값보다 큰 그룹을 재귀로 다시 정렬\n",
+    "\n",
+    "\n",
+    "# 리스트 전체(0~len(list)-1)를 대상으로 재귀함수 호출    \n",
+    "def quick_sort(list):\n",
+    "    quick_sort_sub(list, 0, len(list)-1)\n",
+    "    \n",
+    "\n",
+    "list_8 = [6, 8, 3, 9, 10, 1, 2, 4, 7, 5]\n",
+    "quick_sort(list_8)\n",
+    "print(list_8)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### 파이썬은 sorted()함수와 sort() 함수를 내장하고 있다.\n",
+    "- sorted() : 인자로 리스트를 주면 그 리스트를 정렬한 리스트를 새로 만들어 돌려줌\n",
+    "- sort() : 새 리스트를 따로 만들지 않고 정렬 대상이 되는 리스트 자체에서 정렬해 돌려줌\n",
+    "\n",
+    "### 그렇다면, 파이썬은 실제로 어떤 정렬 알고리즘을 사용해 sort() 함수를 제공하는 걸까?\n",
+    "- Tim Peters라는 사람이 만든 팀소트라는 알고리즘을 이용해 정렬을 한다고 한다.\n",
+    "- Timsort는 병합정렬과 삽입정렬의 아이디어를 적절하게 섞어 만든 새로운 정렬 알고리즘으로 평균 계산 복잡도는 O(nlogn)이라고 한다."
    ]
   },
   {
