modified jpg path again

--- a/algorithm/03-data-structure.ipynb
+++ b/algorithm/03-data-structure.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![stack-and-queue.jpg](/jpg/stack-and-queue.jpg)"
+    "![stack-and-queue.jpg](/jpg/stack-and-queue.jpg)https://github.com/devstacker/python-playground/raw/b626b83d3423322927b56e343fd80b25dbab3330/jpg/stack-and-queue.jpg"
    ]
   },
   {
